# tust-newspaper

./: package-lock.json  package.json  template-2.html  template-3.html  template-4.html  template-head-3.html  template.html
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json  template-1.html  template-2.html  template-3.html  template-4.html  template-5.html  template-content.html  template-head-1.html  template-head-2.html  template-head-4.html
src-tauri/src/: config.rs  html.rs  lib.rs  main.rs  test.rs
