[package]
name = "tust-newspaper"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tust_newspaper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
docx-rs = "0.4.18-rc19"
pdf-writer = "0.13.0"
html_to_pdf_lib = "0.1.2"
html = "0.6.3"
kuchiki = "0.8.1"
ammonia = "4.1.0"
cssparser = "0.35.0"
markup5ever = "0.16.1"
html5ever = "0.31.0"
markup5ever_rcdom = "0.5.3-unofficial"
regex = "1.11.1"
